<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Fundoo App Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fundoo"
        android:textColor="#F6DF04"
        android:textSize="55sp"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Login Subtitle -->
    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- CardView Wrapper -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/titleLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Inner Form Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/titleLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:isCredential="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:isCredential="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginButton"
                android:backgroundTint="#FDE933"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/newUserLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/registerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textSize="15sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/buttonRegisterLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/or_sign_in_with"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/newUserLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/orText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/buttonGoogleLogin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/google_icon"
                    android:contentDescription="@string/google_login"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:layout_marginEnd="20dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@android:color/darker_gray"
                    app:shapeAppearanceOverlay="@style/CircleShape" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/buttonFacebookLogin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/facebook_icon"
                    android:contentDescription="@string/facebook_login"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@android:color/black"
                    app:shapeAppearanceOverlay="@style/CircleShape" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/progressOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000"
                android:gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
